# humble-explorer

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst  readme.rst  requirements.txt  usage.rst
src/humble_explorer/: __init__.py  __main__.py  app.css  app.py  renderables.py  skeleton.py  utils.py  widgets.py
tests/: conftest.py  test_renderables.py  test_skeleton.py
